--- a/app/src/main/res/layout/recipesrow.xml
+++ b/app/src/main/res/layout/recipesrow.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,80 +10,96 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:background="@color/blue3">
+        android:background="@color/blue3"
+        >
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:orientation="vertical"
-            >
+            android:layout_weight="7">
 
-            <TextView
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:orientation="vertical"
+                android:layout_weight="6"
+                >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rowHeader"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/felixti"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rowDescription"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/felixti"
+                    />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/rowHeader"
-                android:textSize="20dp"
-                android:fontFamily="@font/felixti"
-                />
+                android:orientation="horizontal"
+                android:layout_gravity="end"
+                android:gravity="end"
+                >
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/rowDescription"
-                android:layout_marginStart="10dp"
-                android:fontFamily="@font/felixti"
-                />
+                <ImageButton
+                    android:layout_width="120px"
+                    android:layout_height="120px"
+                    android:id="@+id/deleteRow"
+                    android:src="@drawable/garbage"
+                    android:onClick="delRow"
+                    android:padding="20px"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:background="@null"
+                    />
 
-        </LinearLayout>
+                <ImageButton
+                    android:layout_width="120px"
+                    android:layout_height="120px"
+                    android:id="@+id/updateRow"
+                    android:src="@drawable/edit"
+                    android:onClick="updateRow"
+                    android:padding="20px"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:background="@null"
+                    />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="end"
-            android:gravity="end"
-            >
+                <ImageButton
+                    android:layout_width="120px"
+                    android:layout_height="120px"
+                    android:id="@+id/viewRow"
+                    android:src="@drawable/worldwide"
+                    android:onClick="showRow"
+                    android:padding="20px"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:background="@null"
+                    />
 
-            <ImageButton
-                android:layout_width="120px"
-                android:layout_height="120px"
-                android:id="@+id/deleteRow"
-                android:src="@drawable/garbage"
-                android:onClick="delRow"
-                android:padding="20px"
-                android:scaleType="fitCenter"
-                android:adjustViewBounds="true"
-                android:background="@null"
-                />
+            </LinearLayout>
 
-            <ImageButton
-                android:layout_width="120px"
-                android:layout_height="120px"
-                android:id="@+id/updateRow"
-                android:src="@drawable/edit"
-                android:onClick="updateRow"
-                android:padding="20px"
-                android:scaleType="fitCenter"
-                android:adjustViewBounds="true"
-                android:background="@null"
-                />
-
-            <ImageButton
-                android:layout_width="120px"
-                android:layout_height="120px"
-                android:id="@+id/viewRow"
-                android:src="@drawable/worldwide"
-                android:onClick="showRow"
-                android:padding="20px"
-                android:scaleType="fitCenter"
-                android:adjustViewBounds="true"
-                android:background="@null"
-                />
-
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
