rename pakage name and fix upload things

--- a/app/src/main/res/layout/activity_save_recipe.xml
+++ b/app/src/main/res/layout/activity_save_recipe.xml
@@ -218,7 +218,7 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        ads:adUnitId="@string/save_key"
         android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
