--- a/app/src/main/res/layout/activity_display_data.xml
+++ b/app/src/main/res/layout/activity_display_data.xml
@@ -159,7 +159,7 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        ads:adUnitId="@string/display_data_key"
         app:layout_constraintTop_toBottomOf="@+id/displayMain"
         app:layout_constraintBottom_toTopOf="@+id/bottomMargin"
         app:layout_constraintEnd_toEndOf="parent"
