save image to FB and read and delete and show the recipe image

--- a/app/src/main/res/layout/recipesrow.xml
+++ b/app/src/main/res/layout/recipesrow.xml
@@ -97,6 +97,19 @@
                     android:background="@null"
                     />
 
+                <ImageButton
+                    android:layout_width="120px"
+                    android:layout_height="120px"
+                    android:id="@+id/showImageRow"
+                    android:src="@drawable/show_image_icon"
+                    android:onClick="showImage"
+                    android:padding="20px"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:background="@null"
+                    android:tag="1"
+                    />
+
             </LinearLayout>
 
         </RelativeLayout>
