--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,12 @@
         android:text="@string/good_luck"
         android:layout_gravity="center"/>
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/test_image"
+        android:layout_gravity="center"
+        />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
 
