--- a/app/src/main/res/layout/activity_manual_recipe.xml
+++ b/app/src/main/res/layout/activity_manual_recipe.xml
@@ -193,11 +193,11 @@
                             android:id="@+id/measure"
                             android:layout_weight="3"/>
 
-                        <Button
+                        <ImageButton
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="+"
+                            android:src="@drawable/plus_icon"
                             android:id="@+id/addIngredient"/>
 
                     </LinearLayout>
@@ -234,11 +234,11 @@
                             android:maxLines="3"
                             android:layout_weight="11"/>
 
-                        <Button
+                        <ImageButton
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="+"
+                            android:src="@drawable/plus_icon"
                             android:id="@+id/addStage"/>
 
                     </LinearLayout>
