--- a/app/src/main/res/layout/recipesrowarticle.xml
+++ b/app/src/main/res/layout/recipesrowarticle.xml
@@ -80,20 +80,8 @@
                 android:layout_width="120px"
                 android:layout_height="120px"
                 android:id="@+id/viewRow"
-                android:src="@drawable/worldwide"
+                android:src="@drawable/view_recipe"
                 android:onClick="showRow"
-                android:padding="20px"
-                android:scaleType="fitCenter"
-                android:adjustViewBounds="true"
-                android:background="@null"
-                />
-
-            <ImageButton
-                android:layout_width="120px"
-                android:layout_height="120px"
-                android:id="@+id/viewImage"
-                android:src="@drawable/show_image_icon"
-                android:onClick="showImage"
                 android:padding="20px"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
