--- a/app/src/main/res/layout/activity_view_image_activity.xml
+++ b/app/src/main/res/layout/activity_view_image_activity.xml
@@ -10,6 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/viewProgressBar"
+            android:progressDrawable="@drawable/circular_progress_bar"
+            android:indeterminateTint="@color/blue2"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center"/>
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
