--- a/app/src/main/res/layout/activity_view_manual_recipe.xml
+++ b/app/src/main/res/layout/activity_view_manual_recipe.xml
@@ -13,17 +13,26 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/viewHeader"/>
+        android:id="@+id/viewHeader"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="150px"
+        />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="20px">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/manualIngredientsHeader"/>
+            android:text="@string/manualIngredientsHeader"
+            android:textSize="100px"
+            android:textStyle="bold"
+            />
 
         <ListView
             android:layout_width="match_parent"
@@ -35,12 +44,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="20px">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/manualPreparationsHeader"/>
+            android:text="@string/manualPreparationsHeader"
+            android:textSize="100px"
+            android:textStyle="bold"
+            />
 
         <ListView
             android:layout_width="match_parent"
