--- a/app/src/main/res/layout/activity_view_manual_recipe.xml
+++ b/app/src/main/res/layout/activity_view_manual_recipe.xml
@@ -71,7 +71,7 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/main_key"
+        ads:adUnitId="@string/test_id"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
